# cover-style-skills

./: .gitattributes  .gitignore  README.md  SKILL.md  pyproject.toml  skill.json
agents/: openai.yaml
child-skills/pigeonyang-cover-style-dan-koe/: SKILL.md  skill.json
child-skills/pigeonyang-cover-style-he-tongxue/: SKILL.md  skill.json
child-skills/pigeonyang-cover-style-mrbeast/: SKILL.md  skill.json
child-skills/pigeonyang-cover-style-yingshijufeng/: SKILL.md  skill.json
config/: generation-backends.json
design-standards/: README.md
design-standards/dan-koe/: design-standard.md
design-standards/he-tongxue/: design-standard.md
design-standards/mrbeast/: design-standard.md
design-standards/yingshijufeng/: design-standard.md
docs/applications/: pigeonyang-wechat-cover.md
docs/plans/: phase-1-plan.md  phase-2-plan.md
docs/product/: prd.md  product-principles.md
docs/session-snapshots/: 2026-05-28-session-snapshot.md
docs/specs/: mcp-tool-spec.md  (+3 more)
mcp-server/: README.md  cover_project_server.py
references/: cover-research-framework.md  design-standard-template.md  gpt-image-2-cover-prompts.md  platform-cover-standards.md  workspace-management.md
schemas/: generation-backends.schema.json
scripts/: capture_bilibili_space.py  capture_youtube_channel.py  coverctl.py  create_child_skill.py  healthcheck.py  manage_cover_project.py  manage_research_workspace.py  verify_image_dimensions.py  verify_prompt_firewall.py
tests/: test_capture_bilibili_space.py  test_capture_youtube_channel.py  test_coverctl_phase3.py  test_mcp_package_entrypoint.py
(+64 files in other folders)
