[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pigeonyang-cover-mcp"
version = "0.1.0"
description = "Installable local MCP server for PigeonYang cover workflow gates."
readme = "mcp-server/README.md"
requires-python = ">=3.11"
authors = [
  { name = "PigeonYang" }
]
keywords = ["mcp", "cover", "wechat", "pigeonyang", "codex"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Private :: Do Not Upload"
]

[project.scripts]
pigeonyang-cover-mcp = "pigeonyang_cover_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
